--- a/css/common.css
+++ b/css/common.css
@@ -1,3 +1,17 @@
+* {
+  font-family: "VT323", monospace;
+  background-color: #0B0B0B;
+}
+
+html, body, main {
+  height: 100%;
+  width: 100%;
+}
+
+.hidden {
+  display: none;
+}
+
 body h2 {
   color: white;
   font-size: 4rem;
@@ -22,4 +36,33 @@ body {
 }
 .nav-bar a {
   text-decoration: none;
+}
+
+.close-bar {
+  height: 7%;
+  display: flex;
+  padding: 0px 1.5rem;
+  justify-content: flex-end;
+  align-items: center;
+}
+.close-bar__button {
+  text-decoration: none;
+  width: 30px;
+  height: 30px;
+  border: 1px white solid;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.close-bar__button h3 {
+  margin: 0px;
+  position: relative;
+  bottom: 2px;
+  background-color: transparent;
+}
+
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
