--- a/scss/index.scss
+++ b/scss/index.scss
@@ -1,4 +1,5 @@
-@import "./common.scss";
+$bg-color: #0B0B0B;
+$point-color: #D1FF4E;
 
 @keyframes rollDice {
   0% {
@@ -61,9 +62,7 @@ article {
   align-items: center;
 
   .container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    
     h2 {
       height: 50%;
       // margin-bottom: 15vh;
