--- a/css/rock-paper-scissors.css
+++ b/css/rock-paper-scissors.css
@@ -14,6 +14,21 @@
     opacity: 0;
   }
 }
+.result-modal {
+  position: absolute;
+  background-color: #0B0B0B;
+  width: 20vw;
+  height: 10vh;
+  border-radius: 30px;
+  color: #D1FF4E;
+  border: 1px solid #D1FF4E;
+  z-index: 10;
+  box-shadow: 0px 0px 0px 9999px rgba(0, 0, 0, 0.7);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .game1 {
   width: 40vw;
 }
